<resources>
    <!--activity_login.xml-->
    <string name="logo">Logo</string>
    <string name="app_name">Ace Learning</string>
    <string name="email">abc@xyz.com</string>
    <string name="password">*****</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_now">No account ? Register now</string>

    <!--activity_signup.xml-->
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="back_log_in">Back to Log In</string>

    <!--activity_signup_fac.xml-->
    <string name="faculty_sign_up">Faculty Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="subject">Subject</string>
    <string name="select_file">Select File</string>
    <string name="upload_file">Upload File</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit_resume">Submit Resume</string>

    <!--activity_student_signup.xml-->
    <string name="student_sign_up">Student Sign Up</string>

    <!--activity_reset_password.xml-->
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>

    <!--activity_admin_home.xml-->
    <string name="admin_home">Welcome Admin!</string>
    <string name="log_out">Log Out</string>

    <!--user_layout.xml-->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="view_resume">View Resume</string>
    <string name="raj_ambani">Raj Ambani</string>
    <string name="raj_email">techboyambani@gmail.com</string>
    <string name="resume">View Resume</string>

    <!--content_home_fac.xml-->
    <string name="welcome_faculty">Welcome Faculty</string>
    <string name="upload_nla">Upload Notes, Lectures, Assignments</string>
    <string name="test">Test</string>
    <string name="student_score">View Student Score</string>
    <string name="doubt_solving">Doubt Solving</string>
    <string name="swipe_left">Swipe Left for Menu</string>

    <!--activity_upload_material.xml-->
    <string name="upload_material">Upload Study Material</string>
    <string name="upload_as">Upload File As</string>
    <string name="file_name">Name of file</string>
    <string name="done">Done</string>
    <string name="back_home">Back to Home</string>

    <!--activity_updquesobj.xml-->
    <string name="obj_ques">Objective Question</string>
    <string name="select_ques_type">Select Type of Question</string>
    <string name="enter_ques">Enter Question</string>
    <string name="op1">Op. 1</string>
    <string name="op2">Op. 2</string>
    <string name="op3">Op. 3</string>
    <string name="op4">Op. 4</string>
    <string name="select_ans">Select Answer</string>
    <string name="insert_ques">Submit</string>

    <!--activity_updquessub.xml-->
    <string name="sub_ques">Subjective Question</string>

    <!--content_changepassword.xml-->
    <string name="old_pass">Enter old password</string>
    <string name="new_pass">Enter new password</string>

    <!--activity_result.xml-->
    <string name="test_result">Test Results</string>
    <string name="total_ques">Total Questions</string>
    <string name="correct_ans">Correct Answers</string>
    <string name="wrong_ans">Wrong Answers</string>
    <string name="text_view">Text View</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Learn</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Practice </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Analyze </string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_link_to_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="minimum_password">6</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_testscore">student_testscore</string>
    <string name="title_activity_student_doubt">student_doubt</string>

    <string name="title_activity_home_fac">home_fac</string>
    <string name="title_activity_changepassword">changepassword</string>
    <string name="title_activity_logout">logout</string>
    <string name="title_activity_livelecture">livelecture</string>
    <string name="title_activity_uploadques">uploadques</string>
    <string name="title_activity_student_home">student_home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
</resources>